--- a/Pages/buy-now.html
+++ b/Pages/buy-now.html
@@ -193,11 +193,12 @@
         <p class="footer-sec-title"> Social :</p>
         <div class="footer-data">
             <p> <i class="fa-solid fa-envelope"></i>
-                &nbsp; &nbsp; <a href="mailto:ashishgore382@gmail.com">pranalidevtarse26@gmail.com</a>
+              &nbsp; &nbsp; <a href="mailto:pratikshakatore08@gmail.com">pratikshakatore08@gmail.com</a>
             </p>
 
+
             <p> <i class="fa-solid fa-phone"></i>
-                &nbsp; &nbsp; <a href="tel:+918805803087" class="footer-anchor"> +91-9309944106</a>
+                &nbsp; &nbsp; <a href="tel:+911212121212" class="footer-anchor"> +91-1212121212</a>
             </p>
 
             <p> <i class="fa-brands fa-facebook"></i> &nbsp;
@@ -218,15 +219,15 @@
         <div class="footer-data">
 
             <p><i class="fa-solid fa-location-dot"></i>
-                &nbsp; &nbsp; <a href="https://maps.app.goo.gl/N3ngnED1vBDYVvj19" target="blank"> ACS College ,
-                    Sonai</a>
+                &nbsp; &nbsp; <a href="https://maps.app.goo.gl/N3ngnED1vBDYVvj19" target="blank"> pune-maharashtra ,
+                    </a>
             </p>
             <p> <i class="fa-solid fa-envelope"></i>
-                &nbsp; &nbsp; <a href="mailto:pranalidevtarse@gmail.com">pranalidevtarse@gmail.com</a>
+                &nbsp; &nbsp; <a href="mailto:pratikshakatore08@gmail.com">pratikshakatore08@gmail.com</a>
             </p>
 
             <p> <i class="fa-solid fa-phone"></i>
-                &nbsp; &nbsp; <a href="tel:+918975004427"> +91-9309944106</a>
+                &nbsp; &nbsp; <a href="tel:+91-0000000000"> +91-0000000000</a>
             </p>
         </div>
     </div>
