--- a/pages/services.html
+++ b/pages/services.html
@@ -149,7 +149,7 @@
                             class="banner1 rounded-5 mt-3  d-flex justify-content-center align-items-center flex-wrap shadow overflow-hidden ">
 
                             <div class=" text-center p-5 banner-flex">
-                                <img src="./../imgs/services/Mega-Sale-Discount.png" alt="" width="80%">
+                                <img src="./../imgs/services/Mega-Sale-Discount.png" alt="img" width="80%">
                             </div>
                             <div class="banner-flex text-center p-3 text-uppercase">
                                 <h2 class="heading1 fs-1 pb-3 fw-bold  text-decoration-underline text-danger">Grand
@@ -157,19 +157,19 @@
                                 <h2 class="heading1 fs-1 text-primary text-decoration-underline">Coming Soon!</h2>
                                 <div class="coming  d-flex justify-content-center align-items-center flex-column">
                                     <div class="countdown   d-flex justify-content-around text-center">
-                                        <div class="main-day p-5 ">
+                                        <div class="main-day p-4 ">
                                             <h2 class="day fs-3" id="day">Time</h2>
                                             <h2>Day</h2>
                                         </div>
-                                        <div class="main-hour p-5  ">
+                                        <div class="main-hour p-4  ">
                                             <h2 class="hour fs-3" id="hour">Time</h2>
                                             <h2>Hour</h2>
                                         </div>
-                                        <div class="main-min p-5  ">
+                                        <div class="main-min p-4  ">
                                             <h2 class="min fs-3" id="min">Time</h2>
                                             <h2>Min</h2>
                                         </div>
-                                        <div class="main-sec  p-5 ">
+                                        <div class="main-sec  p-4 ">
                                             <h2 class="sec fs-3" id="sec">Time</h2>
                                             <h2>Sec</h2>
                                         </div>
