js is started to apply

--- a/Pages/product-card.html
+++ b/Pages/product-card.html
@@ -23,29 +23,31 @@
        <p class="text-center text-black fs-2">
         Enjoy our flavoursome <br/>range<br/> of gorgeous ice cream
     </p>  
-    <div class="d-flex mx-5 justify-content-center first">
-        <div><img  src="./../imgs/product-card/choco2.png" class="mx-5" id="choco2" alt="choco2"/> </div>
-     <div class="ice-des d-inline-block text-start fs-5 mx-5"> <h1 id="name">Cereal And Milk</h1> <h3 id="price">only at ₹160/-</h3>
-        <div class="id">
+    <div class="d-flex mx-5 justify-content-center row">
+        <div class="col col-lg-2 col-md-1 col-sm-1"><img  src="./../imgs/product-card/choco2.png" class="mx-5" id="choco2" alt="choco2"/> </div>
+     <div class="ice-des d-inline-block text-start fs-5 mx-5 col col-lg-2 col-md-1 col-sm-1"> 
+        <h1 id="name">Cereal And Milk</h1> 
+        <h3 id="price">only at ₹160/-</h3>
+        <p class="id">
              <span id="minus" onclick="dec()"><i class="fa-solid fa-circle-minus outline-hidden fs-2 mt-auto" style="background-color:white;color:#e83e8c"></i></span>
 
             <span class="one" id="one">1 </span>
             <span id="plus" onclick="inc()"><i class="fa-solid fa-circle-plus outline-hidden fs-2 mt-auto" style="color:#e83e8c;"></i></span>
 
-    </div>
+        </p>
         <p id="order">You Order:<p>
             <p id="total">Total amount:</p>
-        <p class="my-4 things">
+        <p class="my-4">
         Things You Need To Know Ice cream <br>is a good choice when you need instant<br> energy after a series of activities or if <br>you need to gain weight.
       
         </p>
-        <div class="flavour-card mx-4" >
-            <div class="effect-hover">
+        <section class="flavour-card mx-4" >
+            <p class="effect-hover">
                 <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
                 <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
                 <button onclick="Toggle1()"  id="btnh1" class="btn1"><i class="fa-solid fa-heart my-0"></i></button>
-            </div>
-    </div>
+            </p>
+        </section>
    
    
     </div>
