--- a/Pages/contact-page.html
+++ b/Pages/contact-page.html
@@ -12,7 +12,7 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
-<body style="background-color: #f9fad5">
+<body>
 <header>
     <div class="nav-container flex" id="nav">
         <div class="right-flex flex">
@@ -103,56 +103,8 @@
         </div>
     </center>
 <br><br>
-<footer class="footer">
-    <div class="footer-container">
-        <div class="row">
-            <div class="footer-col">	
- <h4 style="font-family: copperplate gothic light;font-size: 30px;">Journeyjet</h4>
-                <ul>
-                    <li style="color: white;">Welcome to our premier car rental website, <br>where your journey begins with
-                     convenience, <br> choice, and reliability</li>
-                </ul>
-            </div>
-         <div>&emsp</div>
-         <div>&emsp</div>
-            <div class="footer-col" class="link">
-                <h4>Quick Links</h4>
-                <ul>
-                 <li><a href="../../index.html">Home</a> </li>
-                 <li><a href="./../about.html">About US</a></li>
-                 <li> <a href="./../service.html">Services</a></li>
-                 <li><a href="./../contact.html">Contact</a></li>
-                </ul>
-            </div>
-            <div class="footer-col">
-                <h4>Our Services</h4>
-                <ul>
-                 <li><a href="./../service.html">Car Booking</a></li>
-                 <li><a href="./../service.html">Unlimited Miles Car Rental</a></li>
-                 <li> <a href="./../service.html">Mobile Phone Reservation</a></li>
-                 <li><a href="./../service.html">One Way Car Rental</a></li>
-                </ul>
-            </div>
-            <div>&emsp</div>
-            <div class="footer-col">
-                <h4>follow us</h4>
-                <div class="social-links">
-                 <a href="http://youtube.com/@roadtocode4u" class=""><i class="fa-brands fa-youtube" alt="youtube-icon"></i></a>
-                 <a href="http://github.com/rutuja091" class=""><i class="fa-brands fa-github" alt="github-icon"></i></a>
-                 <a href="http://instagram.com/roadtocode4u" class=""><i class="fa-brands fa-instagram" alt="instagram-icon"></i></a>
-                 <a href="http://linkedin.com/company/roadtocode" class=""><i class="fa-brands fa-linkedin-in" alt="inkedin-icon"></i></a>
-                </div>
-            </div>
-        </div>
-    </div>
-  <p>&nbsp</p>
-  <p>&nbsp</p>
-  <p>&nbsp</p>
-    <p class="copyright">
-     Copyright&copy;Journeyjet 2024
-    </p>
-</footer>
 
+                
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
