category heading change in menu page.

--- a/Pages/menu_page.html
+++ b/Pages/menu_page.html
@@ -108,18 +108,17 @@
   <div class="filter-container">
     <img src="./../icons/menupage-icons/filter.png" height="20px" alt="">Filter
   </div>
-<p class="category-heading">Available Desserts</p>
+  <p class="category-heading">Available Desserts</p>
   <div>
      <div class=" parent-card" >
-        <p class="category-div filter-container"> <a href="./../Pages/flavour_page.html" class="decoration deco-text" target="screen">All</a> </p>
-         <p class="category-div filter-container"> <a href="./../Pages/cookies.html" class="decoration deco-text" target="screen">Cookies</a> </p>
-         <p class="category-div filter-container"><a href="./../Pages/cones.html"  class="decoration deco-text" target="screen">Ice-Cream </a></p>
-         <p class="category-div filter-container"><a href="./../Pages/cones.html" class="decoration deco-text" target="screen">Cones</a></p>
-         <p class="category-div filter-container"><a href="./../Pages/iceCreamBucket.html" class="decoration deco-text" target="screen">Ice-Cream Bucket</a></p>
-         <p class="category-div filter-container"><a href="./../Pages/icecreamSunade.html"  class="decoration deco-text" target="screen">Ice-Cream Sundae</a></p>
+        <button type="button" class="category-div filter-container" onClick="all()" > All</button>
+        <button type="button" class="category-div filter-container" onClick="cookies()" > Cookies</button>
+        <button type="button" class="category-div filter-container" onClick="all()" > Ice-Cream </button>
+        <button type="button" class="category-div filter-container" onClick="all()" > Cones</button>
+        <button type="button" class="category-div filter-container" onClick="all()" > Ice-Cream Bucket</button>
+        <button type="button" class="category-div filter-container" onClick="all()" > Ice-Cream Sundae</button>
      </div>
    
-     <div>
        <iframe src="./../Pages/flavour_page.html" height="1000px" width="1600px" name="screen" frameborder="0"></iframe>
      </div>
   </div>
